Fix niche drop down and menu on mobile

--- a/themes/tbm-brag/scss/header.scss
+++ b/themes/tbm-brag/scss/header.scss
@@ -104,3 +104,7 @@ header {
         display: none !important;
     }
 }
+
+.modal-open header {
+    overflow-y: initial;
+}
